# G-TOML

./: .clang-format  .fast  .gitingore  CMakeLists.txt  README.md  test.toml
bld/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  tomlData.hpp
tests/: main.cpp  test.toml
